Finished, but messy

--- a/site/index.html
+++ b/site/index.html
@@ -11,16 +11,22 @@
 
 <div class="row">
 	<div class="col-lg-4 col-md-6">
-		<h2>Chicken</h2>
+		<div class="header">
+			<h2 id="Chicken">Chicken</h2>
+		</div>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris maximus quam justo, at ornare augue consequat dictum. Vivamus tortor dolor, congue eu ante at, porttitor molestie lorem. Cras tristique risus sollicitudin luctus vulputate. Curabitur vehicula nisi eu lorem auctor, eget posuere libero interdum. Etiam sit amet sapien a ante molestie dignissim. Etiam eget nulla laoreet dui hendrerit eleifend. Maecenas non dolor luctus, mattis sapien nec, ultrices arcu.</p>
 	</div>
 	<div class="col-lg-4 col-md-6">
-		<h2>Beef</h2>
+		<div class="header">
+			<h2 id="Beef">Beef</h2>
+		</div>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris maximus quam justo, at ornare augue consequat dictum. Vivamus tortor dolor, congue eu ante at, porttitor molestie lorem. Cras tristique risus sollicitudin luctus vulputate. Curabitur vehicula nisi eu lorem auctor, eget posuere libero interdum. Etiam sit amet sapien a ante molestie dignissim. Etiam eget nulla laoreet dui hendrerit eleifend. Maecenas non dolor luctus, mattis sapien nec, ultrices arcu.</p>
 	</div>
 	<div class="col-lg-4 col-md-12">
-		<h2>Sushi</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris maximus quam justo, at ornare augue consequat dictum. Vivamus tortor dolor, congue eu ante at, porttitor molestie lorem. Cras tristique risus sollicitudin luctus vulputate. Curabitur vehicula nisi eu lorem auctor, eget posuere libero interdum. Etiam sit amet sapien a ante molestie dignissim. Etiam eget nulla laoreet dui hendrerit eleifend. Maecenas non dolor luctus, mattis sapien nec, ultrices arcu.</p>
+		<div class="header" id="specialHeader">
+			<h2 id="Sushi">Sushi</h2>
+		</div>
+		<p id="specialP">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris maximus quam justo, at ornare augue consequat dictum. Vivamus tortor dolor, congue eu ante at, porttitor molestie lorem. Cras tristique risus sollicitudin luctus vulputate. Curabitur vehicula nisi eu lorem auctor, eget posuere libero interdum. Etiam sit amet sapien a ante molestie dignissim. Etiam eget nulla laoreet dui hendrerit eleifend. Maecenas non dolor luctus, mattis sapien nec, ultrices arcu.</p>
 	</div>
 </div>
 
